--- a/src/Components/PlayButton.css
+++ b/src/Components/PlayButton.css
@@ -1,11 +1,19 @@
 button{
-    background-color: #222222;
-    color: white;
     padding: 10px 20px;
     border-radius: 10px;
-    border: 1px solid rgb(87, 76, 6);
     cursor: pointer;
 }
 button:hover{
     background-color: gray;
+    color: white;
+}
+button.darkMode, .darkMode button{
+    background-color: black;
+    border: 1px solid yellow;
+    color:white
+}
+button.lightMode, .lightMode button{
+    background-color: #ccc;
+    border: 1px solid black;
+    color:black
 }
